[gd_scene load_steps=10 format=3 uid="uid://cqkmwfwiefy8b"]

[ext_resource type="Script" path="res://Components/Mission/mission_slot.gd" id="1_to6ph"]
[ext_resource type="Shader" path="res://Components/Moments/moment_slot.gdshader" id="1_vuac1"]
[ext_resource type="Texture2D" uid="uid://bldb4qj7ni6w2" path="res://UITextures/Icons/newbie_icon.png" id="2_1r1qj"]
[ext_resource type="FontFile" uid="uid://v6ktxqm6y64" path="res://UITextures/Fonts/argentum-sans.semibold.ttf" id="3_od7gc"]
[ext_resource type="FontFile" uid="uid://cak36l0bes2dv" path="res://UITextures/Fonts/argentum-sans.medium.ttf" id="5_oyagv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmkrl"]
bg_color = Color(0, 0.0588235, 0.0588235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.403922, 0.403922, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7ku5"]
bg_color = Color(0.00245657, 0.0230238, 0.0230327, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.222973, 0.626395, 0.626332, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3qls3"]
shader = ExtResource("1_vuac1")
shader_parameter/corner_radius = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xud7o"]

[node name="MissionSlot" type="Control"]
custom_minimum_size = Vector2(530, 65)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_to6ph")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmkrl")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q7ku5")

[node name="DPIcon" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3qls3")
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.472
offset_top = -17.0
offset_right = 16.528
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_1r1qj")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
mouse_filter = 2

[node name="MissionName" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_od7gc")
theme_override_font_sizes/font_size = 14
text = "Audition"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="Panel/HBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(185, 65)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_oyagv")
theme_override_font_sizes/font_size = 10
text = "Complete 3 unique songs to claim the reward"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2

[node name="RewardLabel" type="Label" parent="Panel/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(151, 65)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_od7gc")
theme_override_font_sizes/font_size = 14
text = "2000 BEATS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClaimButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xud7o")
